@@ -6,6 +6,7 @@ Put nfs data in .../L1 instead of .../L1/rootData.
 Put LPA, LCI, MC data in separate folders.
 Do alarms on TKR trending.
 Send messages to log watcher if things get weird.
+Removed site from the end of filenames.
 -------------------------------------------
 
 
